...
                title: 'الرئيسية',
                active: currentIndex == 0,
                onTap: () => onTap(0),
              ),
              NavBarItem(
                icon: Icons.check_circle_outline_rounded,
                title: 'المهام',
                active: currentIndex == 1,
                onTap: () => onTap(1),
              ),
              NavBarItem(
                icon: Icons.favorite_border_rounded,
                title: 'عباداتي',
                active: currentIndex == 2,
                onTap: () => onTap(2),
              ),
              NavBarItem(
                icon: Icons.photo_library_rounded, // ✅ اتغيّرت
                title: 'الذكريات',
...
