...
                  ),
                  SizedBox(height: 18.h),
                  Row(
                    textDirection: TextDirection.rtl,
                    children: [
                      Text(
                        'قائمة اليوم',
                        textDirection: TextDirection.rtl,
                        style: TextStyle(
                          fontSize: 16.sp,
                          fontWeight: FontWeight.w700,
                          color: colorScheme.onSurface,
                        ),
...
